--- a/deploy/ingress/index.html
+++ b/deploy/ingress/index.html
@@ -43,7 +43,7 @@
         <p>This project is so cool, even your toaster will be jealous.</p>
         <p>Don't believe me? Check out the links below:</p>
         <a class="link" href="/api/swagger" target="_blank">API Documentation</a>
-        <a class="link" href="/cockpit" target="_blank">Frontend Dashboard</a>
+        <a class="link" href="/cockpit/" target="_blank">Frontend Dashboard</a>
         <p>Get ready to experience the future of connected devices!</p>
         <p>Disclaimer: No toasters were harmed in the making of this project.</p>
     </div>
